changes based on Stu's feedback

--- a/content/news/2021/07/02/tools-build.adoc
+++ b/content/news/2021/07/02/tools-build.adoc
@@ -17,7 +17,7 @@ Herein we'll describe the latest effort to supply a "batteries-included" story f
 
 == Improving Source Libs
 
-Clojure’s dynamic nature allows us to rethink the way that new libraries and applications are created. That is, we’d rather work directly with source code as our dependencies than static deployed artifacts. Clojure’s new tools.build feature leverages the tools.gitlib library to work with source repositories as dependencies. In addition to working with Git repositories on common hosting services (e.g. Github, Gitlab, etc.) application developers can depend on certain commit SHAs or tagged versions directly.
+Clojure’s dynamic nature allows us to rethink the way that new libraries and applications are created. That is, we’d rather work directly with source code as our dependencies than static deployed artifacts. Clojure’s new tools.build library leverages the tools.gitlib library to work with source repositories as dependencies. In addition to working with Git repositories on common hosting services (e.g. Github, Gitlab, etc.) application developers can depend on certain commit SHAs or tagged versions directly.
 
 ```clojure
 {:deps {GIT-LIB {:git-tag "TAG" :git-sha "SHA"}
@@ -25,29 +25,29 @@ Clojure’s dynamic nature allows us to rethink the way that new libraries and a
 
 In the dependency above we've settled on a standard way to indicate source dependencies using a service-specific library name coupled with a Git tag and prefix SHA, used for verification. In the case of the tools.build library itself, the Github tag (indicated above by `GIT_LIB`)  becomes `io.github.clojure/tools.build`. More information on specifying Git source dependencies is found in the https://clojure.org/reference/deps_and_cli#using-git-libraries[CLI and deps guide].
 
-Occasionally, source dependencies will require preparation (e.g. compilation, text replacement, etc.) before they’re suitable for inclusion on the classpath. In those cases tools.build works with the notion of “unprepped” dependencies, or those that require some kind of preparation before they are usable as dependencies. A common type of “prepable” dependency would be a Java source library that requires compilation before it’s usable as a dependency. Such a dependency is declared as below:
+Occasionally, source dependencies will require preparation (e.g. compilation, text replacement, etc.) before they’re suitable for inclusion on the classpath. A common type of “prepable” dependency would be a Java source library that requires compilation before it’s usable as a dependency. Such a dependency is declared as below:
 
 ```clojure
 {:deps/prep-lib {:alias :build
-                :fn compile
-                :ensure "target/classes"}}
+                 :fn compile
+                 :ensure "target/classes"}}
 ```
 
-The tools.build library will check for the presence of that `target/classes` directory and if it’s not found will execute the associated `compile` task, thus compiling the Java source to the `target`. More information on supporting unprepped dependencies is available on the https://clojure.org/reference/deps_and_cli##preparing-source-dependency-libs[Clojure deps guide detailing preparing source dependencies].
+The tools.build library will check for the presence of the `target/classes` directory and if it’s not found will execute the associated `compile` task, thus compiling the Java source to the `target`. More information on supporting unprepped dependencies is available on the https://clojure.org/reference/deps_and_cli##preparing-source-dependency-libs[Clojure deps guide detailing preparing source dependencies].
 
 == Builds as programs
 
-At its base tools.build uses functions that take a single map containing the key/value mappings of its execution parameters. These “tasks” define a logically coherent portion of a build process. To learn more about the tasks supplied by tools.build you can https://clojure.org/guides/tools_build[read the tools.build reference].footnote:[You can also run the CLI command `clj -X:deps help/doc :ns clojure.tools.build.api` if tools.build is a dependency in your deps.edn file under the `build` alias.]
+At its base tools.build uses functions that take a single map containing the key/value mappings of its execution parameters. These _“task functions”_ define a logically coherent portion of a build process. To learn more about the tasks supplied by tools.build you can https://clojure.org/guides/tools_build[read the tools.build reference].footnote:[You can also run the CLI command `clj -X:deps help/doc :ns clojure.tools.build.api` if tools.build is a dependency in your deps.edn file under the `build` alias.]
 
-These task functions are used to build build-specific _target functions_ in a build.clj file that describe the possible build functions runnable at the REPL and aggregated in your personal build.clj files. An example of using tools.build task functions to build up project-specific target functions in a build.clj file is given in the https://clojure.org/guides/tools_build#source-library-jar-build[tools.build guide].
+Task functions are used to create build-specific _"target functions"_ in a build.clj file that describe the possible build functions runnable at the REPL and aggregated in your personal build.clj files. An example of using tools.build task functions to build up project-specific target functions in a build.clj file is given in the https://clojure.org/guides/tools_build#source-library-jar-build[tools.build guide].
 
 While building aggregate targets by defining functions in your build.clj file is convenient, there are times when you may want to execute ad-hoc pipelines of task and target functions. To perform this, the Clojure CLI allows you to describe and execute a pipeline of functions on the command line, as shown below:
 
 ```bash
-clj -X:build clean jar :env :dev
+clj -X:build clean jar <key/value pairs>
 ```
 
-The kv params are passed at the end and will be used to invoke the first function, `clean`, then the return of that will be passed to `jar`.
+The key->value params are passed at the end and will be used to invoke the first function, `clean`, then the return of that will be passed to `jar`.
 
 == Tools
 
